Fix open place popup Something weird happens in mobile that open/close the popup. I'll try to move the popup out of the place and handle current visible place popup at map level. This can be better because only one popup component is used. Let's see

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -27,8 +27,12 @@ html {
   margin-right: 10px;
 }
 
+.leaflet-top {
+  @apply transition-opacity duration-500 ease-in-out;
+}
+
 .leaflet-search {
-  @apply z-50;
+  @apply z-leafletControlSearchControl;
 }
 
 .hidden-attribute[hidden] {
